# py-cs-aviation-mcp-claude

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
docs/brainstorm/: brainstorm-initialize-20260209.md  project-start.md
docs/pics/: architecture.mmd  diagrams.md  flow.mmd  sequence.mmd
docs/prps/: phase1-csharp-microservices.md  phase2-python-mcp-server.md  phase3-cli-test-client.md
docs/tasks/: phase1-csharp-microservices.md  phase2-python-mcp-server.md  phase3-cli-test-client.md
docs/troubleshoot/20260209/: failing-all-tests.md
src/aviation-mcp/: Dockerfile  README.md  pyproject.toml
src/aviation-mcp-client/: README.md  pyproject.toml
src/aviation-mcp-client/src/: agent.py  client.py  config.py  test_runner.py
src/aviation-mcp-client/tests/: test_client.py
src/aviation-mcp/src/: config.py  server.py
src/aviation-mcp/src/clients/: base.py  flight_status_client.py  gate_info_client.py  weather_client.py
src/aviation-mcp/src/debug_logging/: protocol_logger.py
src/aviation-mcp/src/models/: __init__.py  flight.py  gate.py  weather.py
src/aviation-mcp/src/tools/: base.py  flight_status.py  gate_info.py  weather.py
src/aviation-mcp/tests/: conftest.py
src/aviation-mcp/tests/test_clients/: test_flight_status_client.py  test_gate_info_client.py  test_weather_client.py
src/aviation-mcp/tests/test_tools/: test_flight_status.py  test_gate_info.py  test_weather.py
src/flight-status/: Dockerfile  README.md
src/flight-status/src/: FlightStatus.sln
src/gate-info/: Dockerfile  README.md
src/weather/: Dockerfile  README.md
(+40 files in other folders)
